--- a/seguros.html
+++ b/seguros.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
-  <title>Projeto Final</title>
-  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
+  <title>Seguros | Bike</title>
+  <meta name="description" content="Termos e condições">
 </head>
 
-<body>
+<body id="seguros">
   <header class="header-bg">
     <div class="header container">
       <div class="logo">
@@ -33,93 +33,17 @@
       </nav>
     </div>
   </header>
-  <main class="introducao-bg">
-    <div class="introducao container">
-      <div class="introducao-conteudo">
-        <h1 class="font-1-xxl">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-        <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a class="button-1" href="/">escolha a sua</a>
+  <main class="insurance-bg">
+    <div class="titulo-bg">
+      <div class="titulo container">
+        <p class="font-2-l-b cor-06">Escolha o seguro</p>
+        <h1 class="font-1-xxl cor-01">você seguro<span class="cor-p1">.</span></h1>
       </div>
-      <picture class="introducao-img"><img src="./img/fotos/introducao.jpg" alt="Bicicleta Elétrica Preta"></picture>
-    </div>
-  </main>
-  <article class="bicicletas-lista">
-    <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
-    <ul>
-      <li><a href="./bicicletas/magic.html">
-          <picture><img src="/img/bicicletas/magic-home.jpg" alt="bike 1"></picture>
-          <h3 class="font-1-xl">Magic Might</h3>
-          <span class="font-2-m cor-09">R$ 2699</span>
-        </a></li>
-      <li><a href="./bicicletas/nimbus.html">
-          <picture><img src="/img/bicicletas/nimbus-home.jpg" alt="bike 1"></picture>
-          <h3 class="font-1-xl">Nimbus Stark</h3>
-          <span class="font-2-m cor-09">R$ 4999</span>
-        </a></li>
-      <li><a href="./bicicletas/nebula.html">
-          <picture><img src="/img/bicicletas/nebula-home.jpg" alt="bike 1"></picture>
-          <h3 class="font-1-xl">Nebula</h3>
-          <span class="font-2-m cor-09">R$ 3999</span>
-        </a></li>
-    </ul>
-  </article>
-  <article class="tecno-bg">
-    <div class="tecno container">
-      <div class="tecno-conteudo">
-        <span class="font-2-l-b cor-05">tecnologia avançada</span>
-        <h2 class="font-1-xxl cor-01">você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
-        <p class="font-2-l cor-05">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-        <a class="link" href="./bicicletas.html">Escolha um Modelo</a>
-        <div class="tecno-vantagens">
-          <div>
-            <img src="/img/icones/eletrica.svg" alt="">
-            <h3 class="font-1-m cor-01">Motor Elétrico</h3>
-            <p class="font-2-s cor-05">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
-          </div>
-          <div>
-            <img src="/img/icones/rastreador.svg" alt="">
-            <h3 class="font-1-m cor-01">Rastreador</h3>
-            <p class="font-2-s cor-05">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
-          </div>
-        </div>
 
-      </div>
-      <picture class="tecno-img">
-        <img src="/img/fotos/tecnologia.jpg" alt="">
-      </picture>
     </div>
 
-
-  </article>
-
-  <section class="parceiros container" aria-label="Nossos Parceiros">
-    <h2 class="container font-1-xxl">nossos parceiros<span class="cor-p1">.</span></h2>
-    <ul>
-      <li><img src="/img/parceiros/caravan.svg" alt=""></li>
-      <li><img src="/img/parceiros/ranek.svg" alt=""></li>
-      <li><img src="/img/parceiros/handel.svg" alt=""></li>
-      <li><img src="/img/parceiros/dogs.svg" alt=""></li>
-      <li><img src="/img/parceiros/lescone.svg" alt=""></li>
-      <li><img src="/img/parceiros/flexblog.svg" alt=""></li>
-      <li><img src="/img/parceiros/wildbeast.svg" alt=""></li>
-      <li><img src="/img/parceiros/surfbot.svg" alt=""></li>
-
-    </ul>
-  </section>
-  <section class="testimony" aria-label="depoimento">
-    <picture> <img src="/img/fotos/depoimento.jpg" alt="Mulher pedalando uma bicicleta"></picture>
-    <div class="testimony-conteudo">
-      <blockquote class="font-1-xl cor-p5">
-        <p>Pedalar sempre foi minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo a todos que amo.</p>
-        <span class="font-1-m-b cor-p4">Ana Júlia</span>
-      </blockquote>
-    </div>
-
-  </section>
-
-  <article class="insurance-bg">
     <div class="insurance container">
-      <h2 class="font-1-xxl cor-01">seguros<span class="cor-p1">.</span></h2>
+
       <div class="insurance-item">
         <h3 class="font-1-xl cor-05">PRATA</h3>
         <span class="font-1-xl cor-01"> R$ 199 <span class="font-1-xs cor-06">mensal</span></span>
@@ -132,7 +56,6 @@
         <a class="button-1 secundario" href="/">Inscreva-se</a>
 
       </div>
-
       <div class="insurance-item">
         <h3 class="font-1-xl cor-p1">OURO</h3>
         <span class="font-1-xl cor-01"> R$ 299 <span class="font-1-xs cor-06">mensal</span></span>
@@ -148,6 +71,78 @@
 
       </div>
     </div>
+
+  </main>
+
+  <article class="
+  benefits-bg">
+    <div class="
+    benefits container">
+      <h2 class=" font-1-xxl cor-01">vantagens<span class="cor-p1">.</span></h2>
+      <ul>
+        <li>
+          <img src="/img/icones/eletrica.svg" alt="">
+          <h3 class="font-1-l cor-01">Reparo Elétrico</h3>
+          <p class="font-2-s cor-05">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
+        </li>
+        <li>
+          <img src="/img/icones/carbono.svg" alt="">
+          <h3 class="font-1-l cor-01">Carbono</h3>
+          <p class="font-2-s cor-05">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
+        </li>
+        <li>
+          <img src="/img/icones/sustentavel.svg" alt="">
+          <h3 class="font-1-l cor-01">Sustentável</h3>
+          <p class="font-2-s cor-05">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
+        </li>
+        <li>
+          <img src="/img/icones/rastreador.svg" alt="">
+          <h3 class="font-1-l cor-01">Rastreador</h3>
+          <p class="font-2-s cor-05">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança para efetuarmos a recuperação.</p>
+        </li>
+        <li>
+          <img src="/img/icones/seguro.svg" alt="">
+          <h3 class="font-1-l cor-01">Segurança</h3>
+          <p class="font-2-s cor-05">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro não será perdido em casos de roubo.</p>
+        </li>
+        <li>
+          <img src="/img/icones/velocidade.svg" alt="">
+          <h3 class="font-1-l cor-01">Rapidez</h3>
+          <p class="font-2-s cor-05">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+        </li>
+      </ul>
+
+    </div>
+  </article>
+
+  <article class="questions container">
+    <h2 class=" font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
+    <dl>
+      <div>
+        <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Como posso entrar em contato?</dt>
+        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
+        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
+        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
+        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+      <div>
+        <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
+        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+      </div>
+    </dl>
   </article>
 
   <footer class="footer-bg">
@@ -169,13 +164,13 @@
       </div>
       <div class="footer-redes">
         <a href="/">
-          <img src="./img/redes/instagram.svg" alt="Instagram">
+          <img src="../img/redes/instagram.svg" alt="Instagram">
         </a>
         <a href="/">
-          <img src="./img/redes/facebook.svg" alt="Facebook">
+          <img src="../img/redes/facebook.svg" alt="Facebook">
         </a>
         <a href="/">
-          <img src="./img/redes/youtube.svg" alt="Youtube">
+          <img src="../img/redes/youtube.svg" alt="Youtube">
         </a>
       </div>
       <div class="footer-informacoes">
