--- a/termos.html
+++ b/termos.html
@@ -11,11 +11,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
-  <title>Projeto Final</title>
-  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
+  <title>Termos e Condições | Bike</title>
+  <meta name="description" content="Termos e condições">
 </head>
 
-<body>
+<body id="termos">
   <header class="header-bg">
     <div class="header container">
       <div class="logo">
@@ -26,129 +26,33 @@
       </div>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m">
-          <li><a href="../bicicletas.html">Bicicletas</a></li>
-          <li><a href="../seguros.html">Seguros</a></li>
-          <li><a href="../contato.html">Contato</a></li>
+          <li><a href="bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
         </ul>
       </nav>
     </div>
   </header>
-  <main class="introducao-bg">
-    <div class="introducao container">
-      <div class="introducao-conteudo">
-        <h1 class="font-1-xxl">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-        <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a class="button-1" href="/">escolha a sua</a>
+  <main>
+    <div class="titulo-bg">
+      <div class="titulo container">
+        <p class="font-2-l-b cor-06">Termos de uso</p>
+        <h1 class="font-1-xxl cor-01">Termos e confições<span class="cor-p1">.</span></h1>
       </div>
-      <picture class="introducao-img"><img src="./img/fotos/introducao.jpg" alt="Bicicleta Elétrica Preta"></picture>
+
+    </div>
+    <div class="termos container font-2-s cor-11">
+      <h2 class="font-1-l cor-12">1. Política de Estorno</h2>
+      <p>1.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+      <p>1.2 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+      <p>1.3 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+      <h2 class="font-1-l cor-12">2. Conta do Usuário</h2>
+      <p>2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+      <h2 class="font-1-l cor-12">3. Seguro</h2>
+      <p>3.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
     </div>
   </main>
-  <article class="bicicletas-lista">
-    <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
-    <ul>
-      <li><a href="./bicicletas/magic.html">
-          <picture><img src="/img/bicicletas/magic-home.jpg" alt="bike 1"></picture>
-          <h3 class="font-1-xl">Magic Might</h3>
-          <span class="font-2-m cor-09">R$ 2699</span>
-        </a></li>
-      <li><a href="./bicicletas/nimbus.html">
-          <picture><img src="/img/bicicletas/nimbus-home.jpg" alt="bike 1"></picture>
-          <h3 class="font-1-xl">Nimbus Stark</h3>
-          <span class="font-2-m cor-09">R$ 4999</span>
-        </a></li>
-      <li><a href="./bicicletas/nebula.html">
-          <picture><img src="/img/bicicletas/nebula-home.jpg" alt="bike 1"></picture>
-          <h3 class="font-1-xl">Nebula</h3>
-          <span class="font-2-m cor-09">R$ 3999</span>
-        </a></li>
-    </ul>
-  </article>
-  <article class="tecno-bg">
-    <div class="tecno container">
-      <div class="tecno-conteudo">
-        <span class="font-2-l-b cor-05">tecnologia avançada</span>
-        <h2 class="font-1-xxl cor-01">você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
-        <p class="font-2-l cor-05">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-        <a class="link" href="./bicicletas.html">Escolha um Modelo</a>
-        <div class="tecno-vantagens">
-          <div>
-            <img src="/img/icones/eletrica.svg" alt="">
-            <h3 class="font-1-m cor-01">Motor Elétrico</h3>
-            <p class="font-2-s cor-05">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
-          </div>
-          <div>
-            <img src="/img/icones/rastreador.svg" alt="">
-            <h3 class="font-1-m cor-01">Rastreador</h3>
-            <p class="font-2-s cor-05">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
-          </div>
-        </div>
 
-      </div>
-      <picture class="tecno-img">
-        <img src="/img/fotos/tecnologia.jpg" alt="">
-      </picture>
-    </div>
-
-
-  </article>
-
-  <section class="parceiros container" aria-label="Nossos Parceiros">
-    <h2 class="container font-1-xxl">nossos parceiros<span class="cor-p1">.</span></h2>
-    <ul>
-      <li><img src="/img/parceiros/caravan.svg" alt=""></li>
-      <li><img src="/img/parceiros/ranek.svg" alt=""></li>
-      <li><img src="/img/parceiros/handel.svg" alt=""></li>
-      <li><img src="/img/parceiros/dogs.svg" alt=""></li>
-      <li><img src="/img/parceiros/lescone.svg" alt=""></li>
-      <li><img src="/img/parceiros/flexblog.svg" alt=""></li>
-      <li><img src="/img/parceiros/wildbeast.svg" alt=""></li>
-      <li><img src="/img/parceiros/surfbot.svg" alt=""></li>
-
-    </ul>
-  </section>
-  <section class="testimony" aria-label="depoimento">
-    <picture> <img src="/img/fotos/depoimento.jpg" alt="Mulher pedalando uma bicicleta"></picture>
-    <div class="testimony-conteudo">
-      <blockquote class="font-1-xl cor-p5">
-        <p>Pedalar sempre foi minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo a todos que amo.</p>
-        <span class="font-1-m-b cor-p4">Ana Júlia</span>
-      </blockquote>
-    </div>
-
-  </section>
-
-  <article class="insurance-bg">
-    <div class="insurance container">
-      <h2 class="font-1-xxl cor-01">seguros<span class="cor-p1">.</span></h2>
-      <div class="insurance-item">
-        <h3 class="font-1-xl cor-05">PRATA</h3>
-        <span class="font-1-xl cor-01"> R$ 199 <span class="font-1-xs cor-06">mensal</span></span>
-        <ul class="cor-01">
-          <li>Duas trocas por ano</li>
-          <li>Assistência técnica</li>
-          <li>Suporte 08h às 18h</li>
-          <li>Cobertura estadual</li>
-        </ul>
-        <a class="button-1 secundario" href="/">Inscreva-se</a>
-
-      </div>
-
-      <div class="insurance-item">
-        <h3 class="font-1-xl cor-p1">OURO</h3>
-        <span class="font-1-xl cor-01"> R$ 299 <span class="font-1-xs cor-06">mensal</span></span>
-        <ul class="cor-01">
-          <li>Cinco trocas por ano</li>
-          <li>Assistência especial</li>
-          <li>Suporte 24h</li>
-          <li>Cobertura nacional</li>
-          <li>Desconto em parceiros</li>
-          <li>Acesso ao Clube Bikcraft</li>
-        </ul>
-        <a class="button-1" href="/">Inscreva-se</a>
-
-      </div>
-    </div>
-  </article>
 
   <footer class="footer-bg">
     <div class="footer container">
