--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -5,14 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="../css/style.css">
-
+  <link rel="stylesheet" href="../css/style.min.css">
+  <link rel="icon" href="../favicon.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
   <title>Nimbus Stark</title>
   <meta name="description" content="Nimbus Stark">
+  <script>
+    document.documentElement.classList.add("js");
+  </script>
 </head>
 
 <body id="bicicleta">
@@ -49,7 +52,7 @@
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-05">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
-          <a class="button-1" href="../orcamento.html">comprar agora</a>
+          <a class="button-1" href="../orcamento.html?tipo=bike&produto=nimbus">comprar agora</a>
           <div><span class="font-1-xs cor-06"><img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
             <span class="font-1-xs cor-06"><img src="../img/icones/estoque.svg" alt="">18 em estoque</span>
           </div>
@@ -162,6 +165,7 @@
       <p class="footer-copy font-2-m cor-05 ">Bikcraft - Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
