--- a/bicicletas.html
+++ b/bicicletas.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +16,9 @@
 
   <title>Bicicletas</title>
   <meta name="description" content="Termos e condições">
+  <script>
+    document.documentElement.classList.add("js");
+  </script>
 </head>
 
 <body id="bicicletas">
@@ -182,6 +188,8 @@
             <p class="footer-copy font-2-m cor-05 ">Bikcraft - Alguns direitos reservados.</p>
           </div>
           </footer>
+
+          <script src="./js/script.js"></script>
 </body>
 
 </html>
