--- a/seguros.html
+++ b/seguros.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+
+  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="stylesheet" href="./css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +16,9 @@
 
   <title>Seguros | Bike</title>
   <meta name="description" content="Termos e condições">
+  <script>
+    document.documentElement.classList.add("js");
+  </script>
 </head>
 
 <body id="seguros">
@@ -36,15 +42,15 @@
   <main class="insurance-bg">
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b cor-06">Escolha o seguro</p>
-        <h1 class="font-1-xxl cor-01">você seguro<span class="cor-p1">.</span></h1>
+        <p class="font-2-l-b cor-06 fadeInLeft" data-anime="100">Escolha o seguro</p>
+        <h1 class="font-1-xxl cor-01 fadeInLeft" data-anime="100">você seguro<span class="cor-p1">.</span></h1>
       </div>
 
     </div>
 
     <div class="insurance container">
 
-      <div class="insurance-item">
+      <div class="insurance-item fadeInLeft" data-anime="500">
         <h3 class="font-1-xl cor-05">PRATA</h3>
         <span class="font-1-xl cor-01"> R$ 199 <span class="font-1-xs cor-06">mensal</span></span>
         <ul class="cor-01">
@@ -53,10 +59,10 @@
           <li>Suporte 08h às 18h</li>
           <li>Cobertura estadual</li>
         </ul>
-        <a class="button-1 secundario" href="/">Inscreva-se</a>
+        <a class="button-1 secundario" href="./orcamento.html?tipo=seguro&plano=prata">Inscreva-se</a>
 
       </div>
-      <div class="insurance-item">
+      <div class="insurance-item fadeInRight" data-anime="500">
         <h3 class="font-1-xl cor-p1">OURO</h3>
         <span class="font-1-xl cor-01"> R$ 299 <span class="font-1-xs cor-06">mensal</span></span>
         <ul class="cor-01">
@@ -67,7 +73,7 @@
           <li>Desconto em parceiros</li>
           <li>Acesso ao Clube Bikcraft</li>
         </ul>
-        <a class="button-1" href="/">Inscreva-se</a>
+        <a class="button-1" href="./orcamento.html?tipo=seguro&plano=ouro">Inscreva-se</a>
 
       </div>
     </div>
@@ -119,28 +125,28 @@
     <h2 class=" font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
     <dl>
       <div>
-        <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
-        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dt><button class="font-1-m-b" aria-expanded="true" aria-controls="pergunta1">Qual forma de pagamento vocês aceitam?</button></dt>
+        <dd id="pergunta1" class="font-2-s cor-09 ativo">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
-        <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta2">Como posso entrar em contato?</button></dt>
+        <dd id="pergunta2" class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
-        <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta3">Vocês possuem algum desconto?</button></dt>
+        <dd id="pergunta3" class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
-        <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
-        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta4">Qual a garantia que possuo?</button></dt>
+        <dd id="pergunta4" class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
-        <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
-        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta5">Posso parcelar no boleto?</button></dt>
+        <dd id="pergunta5" class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
-        <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
-        <dd class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dt><button class="font-1-m-b" aria-expanded="false" aria-controls="pergunta6">Quantas trocas posso fazer ao ano?</button></dt>
+        <dd id="pergunta6" class="font-2-s cor-09">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
       </div>
     </dl>
   </article>
@@ -187,6 +193,8 @@
       <p class="footer-copy font-2-m cor-05 ">Bikcraft - Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/plugins/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
