--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
   <title>Nove</title>
-  <meta name="description" content="Fones de ouvido ultra modernos">
+  <meta name="description" content="Fones de Ouvido">
 
 
   <script>
@@ -50,7 +50,7 @@
       </div>
       <picture class="introducao-img fadeInDown" data-anime="700">
         <source media="(max-width: 800px)" srcset=".//img/fotos/introducao-800.jpg">
-        <img src="./img/fotos/introducao.jpg" alt="Mulher com fone verde" width="850" height="1236">
+        <img class="img-intro" src="./img/fotos/introducao.jpg" alt="Mulher com fone verde" width="850" height="1236">
       </picture>
     </div>
   </main>
